--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: My Blog
 description: "A simple Jekyll blog powered by GitHub Pages"
 baseurl: "" # leave empty for main site
-url: "https://mysistersdogmolly.github.io" # change USERNAME to your GitHub username/
+url: "https://mysistersdogmolly.github.io/Jekyll" # change USERNAME to your GitHub username/
 
 theme: minima
 plugins:
