--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ description: "A simple Jekyll blog powered by GitHub Pages"
 baseurl: "" # leave empty for main site
 url: "https://mysistersdogmolly.github.io/Jekyll" # change USERNAME to your GitHub username/
 
-theme: minima
+theme: architect
 plugins:
   - jekyll-feed
